# ART

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: baseline.yaml  learned_image.yaml
src/reasoning_with_art/: cli.py  config.py  pipeline.py
src/reasoning_with_art/datasets/: base.py  gsm8k.py  svamp.py
src/reasoning_with_art/datasets/evaluation/: __init__.py  exact_match.py  reward_shaping.py
src/reasoning_with_art/modalities/: image.py
src/reasoning_with_art/models/: __init__.py  base.py  chat_template.py  local_client.py  model_loading.py
src/reasoning_with_art/tools/: __init__.py  instrumentation.py
